--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
   box-shadow: 2px 2px 3px black;
   width:320px;
   height:240px;
+  vertical-align: initial;
 }
 
 #canvas {
@@ -30,6 +31,7 @@
   width: 340px;
   display:inline-block;
 }
+
 
 #startbutton {
   display:block;
