--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,5 +50,46 @@
 .contentarea {
   font-size: 16px;
   font-family: "Lucida Grande", "Arial", sans-serif;
-  width: 760px;
+  /*width: 760px;*/
+}
+
+.del_img {
+  width: 30px;
+  height: 30px;
+  text-align: center;
+  padding: 6px 0;
+  font-size: 12px;
+  line-height: 1.428571429;
+  border-radius: 15px;
+  opacity: 0.7;
+
+  margin:5px 5px 0 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.images {
+  border: 2px solid rgba(255, 255, 255, 0.7);
+  box-shadow: 0px 0px 1px 2px rgba(0, 0, 0, 0.2);
+  margin:10px;
+  display: inline-block;
+  float: left;
+
+  position: relative;
+}
+
+#user-avatar{
+  background-color: #66ccff;
+  height: 280px;
+}
+
+#user-pictures{
+  background-color: #99ffcc;
+  height: 280px;
+}
+
+#user-paragraph{
+  background-color: #ffccff;
+  height: 280px;
 }
