--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@
   position: relative;
 }
 
-#user-avatar{
+/* #user-avatar{
   background-color: #66ccff;
   height: 280px;
 }
@@ -91,5 +91,35 @@
 
 #user-paragraph{
   background-color: #ffccff;
-  height: 280px;
+  
+} */
+
+.hide{
+	display: none;
+}
+
+.fieldStyle{
+	border-radius: 15px 15px 15px 15px;
+	-moz-border-radius: 15px 15px 15px 15px;
+	-webkit-border-radius: 15px 15px 15px 15px;
+	border: 1px solid #e7a61a;
+	/*background-color: #6beeff;*/
+	height: 280px;
+	margin: 17px;
+	background-image: url("../../assets/images/wood.png");
+	-webkit-box-shadow: 0px 0px 34px 2px rgba(0,0,0,0.76);
+	-moz-box-shadow: 0px 0px 34px 2px rgba(0,0,0,0.76);
+	box-shadow: 0px 0px 34px 2px rgba(0,0,0,0.76);
+}
+
+#paragraph{
+	background-image: url("../../assets/images/sprinkles.png");
+	/*background-color: grey;*/
+	border-radius: 15px 15px 15px 15px;
+	-moz-border-radius: 15px 15px 15px 15px;
+	-webkit-border-radius: 15px 15px 15px 15px;
+}
+
+body{
+	background-image: url("../../assets/images/sprinkles.png");
 }
