--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,32 +95,34 @@
 	-webkit-border-radius: 15px 15px 15px 15px;
 	border: 1px solid #e7a61a;
 	/*background-color: #6beeff;*/
-	height: 300px;
+	height: 320px;
 	margin: 17px;
-	background-image: url("../../assets/images/wood.png");
+  background-image: url("../../assets/images/white_leather.png");
+	/*background-image: url("../../assets/images/wood.png");*/
 	-webkit-box-shadow: 0px 0px 34px 2px rgba(0,0,0,0.76);
 	-moz-box-shadow: 0px 0px 34px 2px rgba(0,0,0,0.76);
 	box-shadow: 0px 0px 34px 2px rgba(0,0,0,0.76);
 }
 
 #paragraph{
-	background-image: url("../../assets/images/sprinkles.png");
+  background-image: url("../../assets/images/gridme.png");
+	/*background-image: url("../../assets/images/sprinkles.png");*/
     font-size: 25px;
 	border-radius: 15px 15px 15px 15px;
 	-moz-border-radius: 15px 15px 15px 15px;
 	-webkit-border-radius: 15px 15px 15px 15px;
-	fo
+
 }
 
 body{
 	font-family: 'Ek Mukta', sans-serif;
-	background-image: url("../../assets/images/sprinkles.png");
+  background-image: url("../../assets/images/gridme.png");
+	/*background-image: url("../../assets/images/sprinkles.png");*/
 }
 
-.fieldStyle label {
-	font-family: 'Ek Mukta', sans-serif;
-	font-size: 25px;
-}
+ #main label{
+  font-size: 25px;
+} 
 
 #submitParagraph{
 	margin-top: 10px;
@@ -133,7 +135,7 @@ body{
 
 #img-block{
 	margin: auto;
-    width: 60%;
+  width: 60%;
 }
 
 #picture-uploader{
@@ -152,12 +154,29 @@ body{
 	float: right;
 }
 
-#nav-field{
-    font-family: 'Ek Mukta', sans-serif;
-    font-size: 20px;
-    padding: 10px 20px;
+.nav-font{
+  font-size: 20px;
+  padding: 10px 20px;
 }
 
 #main{
 	margin-bottom: 30px;
+}
+
+#login-logout a:hover{
+  cursor:pointer
+}
+
+#favorite{
+  display: none;
+  margin-right: 40px;
+}
+
+#user-paragraph div{
+  padding: 0px 30px 0px 30px;
+}
+
+#fav-field{
+  height: 550px;
+  display: none;
 }
